<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/moviesAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_movie"/>

    <Button
        android:id="@+id/seriesAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_series"/>

    <Button
        android:id="@+id/anythingAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option_anything"/>

</merge>