...
            android:keepScreenOn="true"
            android:text="@string/search_title"
            android:textColor="@color/colorAccent"
            android:textSize="50sp"
            android:textStyle="bold"
            android:focusable="true"
            android:nextFocusForward="@id/titleField"
            android:nextFocusDown="@id/titleField"
            android:nextFocusRight="@id/titleField"
            android:nextFocusUp="@id/executeSearchAction"
            >
        </TextView>

        <EditText
            android:id="@+id/titleField"
            android:layout_width="match_parent"
...
